syntax = "proto3";

package order.v1;

import "buf/validate/validate.proto";
import "order/v1/order.proto";

option go_package ="github.com/wizlif/tempmee_assignment/order/v1";

message CreateOrderRequest {
  int64 book_id = 1 [
    (buf.validate.field).int64.gt = 0,
    (buf.validate.field).required = true
    ];
  string email = 2 [
    (buf.validate.field).string.email = true,
    (buf.validate.field).required = true
    ];

    // Total number of books to purchase
    int64 total = 3 [
    (buf.validate.field).int64.gt = 0
    ];
}

message CreateOrderResponse {
  Order order = 1;
}
